@@ -4,6 +4,11 @@
 	* spc_pdfm.c: rename my_parse_pdf_dict to
 	parse_pdf_dict_with_tounicode.
 
+	* dvipdfmx.c, dvi.c: Always accept .xdv file extension.
+	* dvipdfmx.c: Remove some unnecessary is_xetex checks.
+	* dvipdfmx.c: Allow DVIPDFM emulation mode even with xdvipdfmx, there
+	is no much gain from not doing so.
+
 2014-07-28  Jiang Jiang  <gzjjgod@gmail.com>
 
 	* dpxfile.c (qcheck_filetype): Skip opening non-existent file.
